tests/paczka1/small_fuzzy/53744035.err
Error in line 6: S250 A274 76,79
Error in line 1: S250 A274 56,4
